language-server/src/tests/snapshots/gleam_language_server__tests__completion__internal_types_from_root_package_are_in_the_completions.snap
---
source: language-server/src/tests/completion.rs
expression: "import dep\n\npub fn wibble(\n    _: String,\n) -> Nil {\n    Nil\n}"
---
import dep

pub fn wibble(
|    _: String,
) -> Nil {
    Nil
}


----- Completion content -----
BitArray
  kind:   Class
  detail: Type
  sort:   5_BitArray
Bool
  kind:   Class
  detail: Type
  sort:   5_Bool
Float
  kind:   Class
  detail: Type
  sort:   5_Float
Int
  kind:   Class
  detail: Type
  sort:   5_Int
List
  kind:   Class
  detail: Type
  sort:   5_List
Nil
  kind:   Class
  detail: Type
  sort:   5_Nil
Result
  kind:   Class
  detail: Type
  sort:   5_Result
String
  kind:   Class
  detail: Type
  sort:   5_String
UtfCodepoint
  kind:   Class
  detail: Type
  sort:   5_UtfCodepoint
dep.Alias
  kind:   Class
  detail: Type
  sort:   4_dep.Alias
  edits:
    [3:0-3:0]: "dep.Alias"
dep.AnotherType
  kind:   Class
  detail: Type
  sort:   4_dep.AnotherType
  edits:
    [3:0-3:0]: "dep.AnotherType"
