language-server/src/tests/snapshots/gleam_language_server__tests__completion__internal_types_from_the_same_module_are_in_the_completions.snap
---
source: language-server/src/tests/completion.rs
expression: "\n@internal pub type Alias = Result(Int, String)\n@internal pub type AnotherType {\n  Wibble\n}\n"
---

@internal pub type Alias = Result(Int, String)
@internal pub type AnotherType {
|  Wibble
}


----- Completion content -----
Alias
  kind:   Class
  detail: Type
  sort:   3_Alias
  edits:
    [3:0-3:0]: "Alias"
AnotherType
  kind:   Class
  detail: Type
  sort:   3_AnotherType
  edits:
    [3:0-3:0]: "AnotherType"
BitArray
  kind:   Class
  detail: Type
  sort:   5_BitArray
Bool
  kind:   Class
  detail: Type
  sort:   5_Bool
Float
  kind:   Class
  detail: Type
  sort:   5_Float
Int
  kind:   Class
  detail: Type
  sort:   5_Int
List
  kind:   Class
  detail: Type
  sort:   5_List
Nil
  kind:   Class
  detail: Type
  sort:   5_Nil
Result
  kind:   Class
  detail: Type
  sort:   5_Result
String
  kind:   Class
  detail: Type
  sort:   5_String
UtfCodepoint
  kind:   Class
  detail: Type
  sort:   5_UtfCodepoint
