language-server/src/tests/snapshots/gleam_language_server__tests__completion__internal_values_from_root_package_are_in_the_completions.snap
---
source: language-server/src/tests/completion.rs
expression: import dep
---
|import dep


----- Completion content -----
Error
  kind:   Constructor
  detail: gleam
  sort:   5_Error
False
  kind:   EnumMember
  detail: gleam
  sort:   5_False
Nil
  kind:   EnumMember
  detail: gleam
  sort:   5_Nil
Ok
  kind:   Constructor
  detail: gleam
  sort:   5_Ok
True
  kind:   EnumMember
  detail: gleam
  sort:   5_True
dep.Wobble
  kind:   EnumMember
  detail: Wibble
  sort:   4_dep.Wobble
  desc:   app
  edits:
    [1:0-1:0]: "dep.Wobble"
dep.main
  kind:   Function
  detail: fn() -> Int
  sort:   4_dep.main
  desc:   app
  edits:
    [1:0-1:0]: "dep.main"
dep.random_float
  kind:   Function
  detail: fn() -> Float
  sort:   4_dep.random_float
  desc:   app
  edits:
    [1:0-1:0]: "dep.random_float"
dep.wibble
  kind:   Constant
  detail: Int
  sort:   4_dep.wibble
  desc:   app
  edits:
    [1:0-1:0]: "dep.wibble"
