language-server/src/tests/snapshots/gleam_language_server__tests__completion__labelled_arguments.snap
---
source: language-server/src/tests/completion.rs
expression: "\npub type Wibble {\n  Wibble(wibble: Int, wobble: Float)\n}\n\npub fn main() {\n  Wibble(w)\n}\n"
---

pub type Wibble {
  Wibble(wibble: Int, wobble: Float)
}

pub fn main() {
  Wibble(w|)
}


----- Completion content -----
Error
  kind:   Constructor
  detail: gleam
  sort:   5_Error
False
  kind:   EnumMember
  detail: gleam
  sort:   5_False
Nil
  kind:   EnumMember
  detail: gleam
  sort:   5_Nil
Ok
  kind:   Constructor
  detail: gleam
  sort:   5_Ok
True
  kind:   EnumMember
  detail: gleam
  sort:   5_True
Wibble
  kind:   Constructor
  detail: fn(Int, Float) -> Wibble
  sort:   3_Wibble
  desc:   app
  edits:
    [6:9-6:10]: "Wibble"
main
  kind:   Function
  detail: fn() -> Wibble
  sort:   3_main
  desc:   app
  edits:
    [6:9-6:10]: "main"
wibble:
  kind:   Field
  detail: Int
  sort:   1_wibble:
wobble:
  kind:   Field
  detail: Float
  sort:   1_wobble:
