language-server/src/tests/snapshots/gleam_language_server__tests__completion__labelled_arguments_after_label.snap
---
source: language-server/src/tests/completion.rs
expression: "\npub type Wibble {\n  Wibble(wibble: Int, wobble: Float)\n}\n\npub fn main() {\n  Wibble(wibble: w)\n}\n"
---

pub type Wibble {
  Wibble(wibble: Int, wobble: Float)
}

pub fn main() {
  Wibble(wibble: w|)
}


----- Completion content -----
Error
  kind:   Constructor
  detail: gleam
  sort:   5_Error
False
  kind:   EnumMember
  detail: gleam
  sort:   5_False
Nil
  kind:   EnumMember
  detail: gleam
  sort:   5_Nil
Ok
  kind:   Constructor
  detail: gleam
  sort:   5_Ok
True
  kind:   EnumMember
  detail: gleam
  sort:   5_True
Wibble
  kind:   Constructor
  detail: fn(Int, Float) -> Wibble
  sort:   3_Wibble
  desc:   app
  edits:
    [6:17-6:18]: "Wibble"
main
  kind:   Function
  detail: fn() -> Wibble
  sort:   3_main
  desc:   app
  edits:
    [6:17-6:18]: "main"
