language-server/src/tests/snapshots/gleam_language_server__tests__completion__labelled_arguments_from_different_module.snap
---
source: language-server/src/tests/completion.rs
expression: "\nimport wibble\n\npub fn main() {\n  wibble.divide(10, b)\n}\n"
---

import wibble

pub fn main() {
  wibble.divide(10, b|)
}


----- Completion content -----
Error
  kind:   Constructor
  detail: gleam
  sort:   5_Error
False
  kind:   EnumMember
  detail: gleam
  sort:   5_False
Nil
  kind:   EnumMember
  detail: gleam
  sort:   5_Nil
Ok
  kind:   Constructor
  detail: gleam
  sort:   5_Ok
True
  kind:   EnumMember
  detail: gleam
  sort:   5_True
by:
  kind:   Field
  detail: Int
  sort:   1_by:
main
  kind:   Function
  detail: fn() -> Int
  sort:   3_main
  desc:   app
  edits:
    [4:20-4:21]: "main"
wibble.divide
  kind:   Function
  detail: fn(Int, Int) -> Int
  sort:   4_wibble.divide
  desc:   app
  edits:
    [4:20-4:21]: "wibble.divide"
