language-server/src/tests/snapshots/gleam_language_server__tests__completion__local_private_type.snap
---
source: language-server/src/tests/completion.rs
expression: "\ntype Zoo = Int\n\npub fn wibble(\n  x: String,\n) -> String {\n  \"ok\"\n}\n"
---

type Zoo = Int

pub fn wibble(
|  x: String,
) -> String {
  "ok"
}


----- Completion content -----
BitArray
  kind:   Class
  detail: Type
  sort:   5_BitArray
Bool
  kind:   Class
  detail: Type
  sort:   5_Bool
Float
  kind:   Class
  detail: Type
  sort:   5_Float
Int
  kind:   Class
  detail: Type
  sort:   5_Int
List
  kind:   Class
  detail: Type
  sort:   5_List
Nil
  kind:   Class
  detail: Type
  sort:   5_Nil
Result
  kind:   Class
  detail: Type
  sort:   5_Result
String
  kind:   Class
  detail: Type
  sort:   5_String
UtfCodepoint
  kind:   Class
  detail: Type
  sort:   5_UtfCodepoint
Zoo
  kind:   Class
  detail: Type
  sort:   3_Zoo
  edits:
    [4:0-4:0]: "Zoo"
